Horizontal scrolling issue has been fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,12 +11,14 @@
 
 html {
     scroll-behavior: smooth !important;
+    overflow-x: hidden !important;
 }
 
 body {
     max-width: 100vw;
     color: rgb(var(--foreground-rgb));
     background: rgb(var(--background-start-rgb));
+    overflow-x: hidden;
 }
 
 /* Hide scrollbar for Chrome, Safari, and Opera */
